# tsplatter

./: .gitignore  README.md  metric.json  preprocessing.py  pyproject.toml  render_video.py  search_poses.py  shuffle.py  smoothing.py  solve_sh.py
arguments/: __init__.py
gaussian_renderer/: __init__.py
outputs/DailyStuff1/tsplatter/2025-07-19_143301/: config.yml  dataparser_transforms.json  eval.json
outputs/DailyStuff1/tsplatter/2025-07-19_151248/: config.yml  eval.json  eval0.json
scene/: __init__.py  cameras.py  colmap_loader.py  dataset_readers.py  gaussian_model.py
scripts/: evalhp.py
tsplatter/: __init__.py  losses.py  ts_config.py  ts_datamanager.py  ts_model.py  ts_pipeline.py
tsplatter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tsplatter/data/: thermalmap_dataparser.py  ts_dataset.py
tsplatter/utils/: color_utils.py  normal_utils.py  utils.py
utils/: camera_utils.py
