[project]
name = "tsplatter"
description = "TSplatter: quick thermal splatter"
version = "0.0.1"

dependencies = [
    # "nerfstudio == 1.1.3",
    "black == 22.3.0",
    "natsort",
    "pymeshlab>=2022.2.post2; platform_machine != 'arm64' and platform_machine != 'aarch64'",
    "pytest",
    "vdbfusion",
    "PyMCubes==0.1.2",
    "omnidata-tools",
    "pytorch-lightning",
    "torch",
    # required for dsine normal network
    "geffnet",
    # "rerun-sdk",
    "pyrender",
]

[tool.setuptools.packages.find]
include = ["tsplatter*"]

[project.entry-points.'nerfstudio.method_configs']
tsplatter = 'tsplatter.ts_config:tsplatter'

[project.entry-points.'nerfstudio.dataparser_configs']
thermalmap = 'tsplatter:ThermalMapDataParserSpecification'
